--- a/memory_1/memory.css
+++ b/memory_1/memory.css
@@ -7,6 +7,7 @@ body {
     border: 3px solid blue;
     padding: 0 2em 1em;
 }
+
 h1 { 
     font-size: 150%;
     color: blue;
@@ -39,19 +40,30 @@ p {
 #new_game, #player, #high_score, #correct {
 	float: left;
 }
-#cards img {
-    height: 100px;
-    width: 80px;
-    padding-right: 5px;
-    padding-bottom: 3px;
-    float: left; 
-}
- 
-.back {
+
+.grid {
+    max-width: 300px;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly
+  }
+  
+  .card {
+    margin: 5px;
+    background-color: #6589f9;
+    background-repeat: no-repeat;
+    background-position: center center;
     height: 80px;
     width: 64px;
+  }
+.selected {
+    border: 2px solid blue;
 }
-
+.match {
+    border: 4px solid red;
+    background-image: none !important;
+}
 .clear {
     clear: both;
 }
