added additional array elements that slice depending on difficulty option, added some CSS styling for the front and back of each individual card selected and matched as well. Will be adding update scoring to the card game.

--- a/memory_1/memory.css
+++ b/memory_1/memory.css
@@ -1,3 +1,10 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+
 body {
     font-family: Verdana, Arial, Helvetica, sans-serif;
     font-size: 100%;
@@ -67,29 +74,24 @@ p {
       backface-visibility: hidden;
   }
   .front {
-    border: 2px solid red;
-    background: url('./images/back.png');
+    background: url('./images/back.png') no-repeat center center / contain;
+
   }
   .back{
-      background: url('./images/back.png');
       transform: rotateY(180deg);
       background-color: white;
       background-size: contain;
       background-repeat: no-repeat;
       background-position: center center;
+
   }
 
 .selected {
-    
     transform: rotateY(180deg);
 }
-
-.match, 
-.front {
-    background: white !important;
-}
 .match {
-    border: 4px solid red;
+    border: 3px solid white;
+    background: white !important;
 }
 .clear {
     clear: both;
